- display one image in a row on small screens(nvrtakes) - minor fix

--- a/nvrtakes/css/nvrtakes.css
+++ b/nvrtakes/css/nvrtakes.css
@@ -76,3 +76,17 @@ footer {
     transform: scale(1.1);
     color: #f4bf35;
 }
+
+@media (max-width: 768px) {
+    .photo-grid {
+        flex-direction: column;
+    }
+
+    .photo-column {
+        flex: 100%;
+    }
+
+    img {
+        cursor: pointer;
+    }
+}
